oom gc log